# rich-chat

./: LICENSE  README-CN.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
icons/: icon.icns
src/: App.css  App.tsx  i18n.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CalendarView.tsx  ChatPage.css  ChatPage.tsx  EventDetailModal.tsx  EventEditModal.tsx  InvestmentStyleConfig.tsx  NewsPanel.tsx  PortfolioManager.tsx  RightPanel.tsx  SystemConfig.tsx
src/contexts/: ConfigContext.tsx
src/locales/: en.json
src/locales/en/: translation.json
src/locales/zh/: translation.json
src/services/: cailianshe.ts  index.ts  newsService.ts  wallstreetcn.ts  weibo.ts  xueqiu.ts
src/utils/: promptUtils.ts
