[package]
name = "richchat"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "richchat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
# Update tauri-build to the latest compatible version
tauri-build = { version = "~2.2.0", features = [] }

[dependencies]
# Update tauri to the latest compatible version
tauri = { version = "~2.5.0", features = [] }
tauri-plugin-opener = "2.2.6"
# Add the required plugins
tauri-plugin-http = "~2.0.0"
tauri-plugin-shell = "~2.0.0"
# Other dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
once_cell = "1.19"
